DBClientSession/DBClientConnection constructor doesn't use so_timeout argument

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Service Arch
    • Minor Change
    • ALL
    • Service Arch 2023-12-11
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      DBClientSession and DBClientConnection have constructors here and here that take an so_timeout argument. Presumably, this is intended to set the socket timeout for the connection, like the setSoTimeout member function does, but the argument is unused today.

      We should either correctly set the socket timeout or remove the constructor argument to avoid confusion

            Assignee:
            Vinod Kumar (Inactive)
            Reporter:
            George Wangensteen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: