SERVER-83408 Fixed the DBClientSession constr to use soTimeout param

GitOrigin-RevId: 12c687ae3dce574cc5e1fac2e404c8de21f5addb